# libtooling-helper

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: DelegateInterface.h  ToolingHelper.cpp  ToolingHelper.h  Worker.h  WorkerFactory.h
src/detail/: ConsumerWrapper.h  TypeSupport.h  VisitorWrapper.h
src/opt/: CommandLineHelper.cpp  CommandLineHelper.h  CommandOption.h
src/type/: TypeDefine.h  TypeSupport.h
test/: helper-commandline-tests.cpp  helper-tests.cpp
